k8s/05-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dashboard
  labels:
    app: backend
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: dashboard
spec:
# Creates an internal Service that is reachable inside the Kubernetes cluster.
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
#This is the port exposed by the Service.
    port: 5000
    targetPort: http
    protocol: TCP
