k8s/08-frontend-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dashboard
  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: dashboard
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: http
    nodePort: 30080
    protocol: TCP
