k8s/11-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: dashboard
  labels:
    app: mariadb
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: dashboard
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: mariadb
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
    protocol: TCP
