k8s/13-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dashboard
  labels:
    app: redis
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: dashboard
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - name: redis
    port: 6379
    targetPort: redis
    protocol: TCP
